Add user-profile to main page

--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -19,6 +19,12 @@
   job="Juriste"
   [hired]="false"
 ></user-profile>
+<user-profile
+  first-name="Alexandre"
+  last-name="Bon"
+  job="Vigneron"
+  [hired]="true"
+></user-profile>
 
 <p>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae architecto
